@@ -5,6 +5,7 @@ Bug fixes:
 - PR#123, PR#4477: custom exception printers
 - PR#3456: Obj.double_field and Obj.set_double_field functions
 - PR#4003: destination directory can be given to Filename.[open_]temp_file
+- PR#4647: Buffer.blit function
 - PR#4685: access to Filename.dir_sep
 - PR#4813: issue with parsing of float literals by the GNU assembler
 - PR#4818: missed opportunity for type-based optimization of bigarray accesses
